--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "classnames": "^2.3.1",
     "framer-motion": "^6.2.9",
+    "magic-sdk": "^8.1.0",
     "next": "12.1.4",
     "react": "18.0.0",
     "react-dom": "18.0.0"
