--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@magic-sdk/admin": "^1.4.1",
     "classnames": "^2.3.1",
     "framer-motion": "^6.2.9",
+    "jsonwebtoken": "^8.5.1",
     "magic-sdk": "^8.1.0",
     "next": "12.1.4",
     "react": "18.0.0",
